<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>nl.infomedics</groupId>
	<artifactId>invoice-parser</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>invoice-parser</name>
	<description>Zip File Parser and Data model assembler</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>25</java.version>
		<spring-boot.version>3.5.7</spring-boot.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
		<lombok.version>1.18.42</lombok.version>
		<univocity-parsers.version>2.9.1</univocity-parsers.version>
		<invoice-models.version>1.0.0</invoice-models.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-json</artifactId>
		</dependency>
		<dependency>
			<groupId>nl.infomedics.invoicing</groupId>
			<artifactId>invoice-models</artifactId>
			<version>${invoice-models.version}</version>
		</dependency>
		<!-- Ultra-fast CSV/TSV parsing (semicolon) -->
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>${univocity-parsers.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
			      <groupId>org.apache.maven.plugins</groupId>
			      <artifactId>maven-compiler-plugin</artifactId>
			      <configuration>
			        <source>${java.version}</source>
			        <target>${java.version}</target>
			        <release>${java.version}</release>
			        <annotationProcessorPaths>
			          <path>
			            <groupId>org.projectlombok</groupId>
			            <artifactId>lombok</artifactId>
			            <version>${lombok.version}</version>
			          </path>
			        </annotationProcessorPaths>
			      </configuration>
			</plugin>
    		<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
